fix width of .content-assist-img on smaller screen

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -1243,7 +1243,6 @@ footer .flex{
 
     .ai-add-on .ai-add-on-description,
     .ai-add-on .ai-add-on-img,
-    .content-assist-header .content-assist-img,
     .content-assist-features-container .content-assist-feature-item,
     .task-automation-features-container .task-automation-feature-item,
     .data-privacy-features-container .data-privacy-feature-item,
